samples/_failures_safe/1761605820_3b7744_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3d138d1.c: In function ‘main’:
./samples/SAFE/__tmp_b3d138d1.c:143:26: error: missing terminating " character
  143 |     mat2.rows = read_int("  Rows (1-
      |                          ^~~~~~~~~~~
./samples/SAFE/__tmp_b3d138d1.c:143:5: error: expected expression at end of input
  143 |     mat2.rows = read_int("  Rows (1-
      |     ^~~~
./samples/SAFE/__tmp_b3d138d1.c:143:17: error: too few arguments to function ‘read_int’
  143 |     mat2.rows = read_int("  Rows (1-
      |                 ^~~~~~~~
./samples/SAFE/__tmp_b3d138d1.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_b3d138d1.c:143:5: error: expected declaration or statement at end of input
  143 |     mat2.rows = read_int("  Rows (1-
      |     ^~~~
